samples/_failures_safe/1761138691_c49aec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8c5a54a.c: In function ‘main’:
./samples/SAFE/__tmp_f8c5a54a.c:180:9: error: expected expression at end of input
  180 |         if (current_state ==
      |         ^~
./samples/SAFE/__tmp_f8c5a54a.c:180:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f8c5a54a.c:180:9: error: expected declaration or statement at end of input
